# Periodic-Table

./: .gitattributes  Cargo.toml  elements.json  readme.md  tailwind.config.js
.github/workflows/: rust.yml
src/: main.rs
static/css/: 404.css  500.css  landingpage.css  login.css  scroll.css  scroll2.css  start.css
static/css/elements/: element.css  hydrogen.css
static/javascript/: scroll.js  startpage.js
static/tailcss/: login_o.css  start_o.css
static/tailcss/elements/: element_o.css
templates/: index.html.tera  login.html.tera  shell.sh  signup.html.tera  start.html.tera  test  test2.html.tera  test4
templates/elements/: element.html.tera  hydrogen.html.tera
templates/error/: 404.html.tera  500.html.tera
