[package]
name = "Periodic_table"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.3"
rocket_dyn_templates = { version = "=0.1.0-rc.3", features = ["tera"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
diesel = { version = "2.1.0", features = ["postgres"] }
dotenvy = "0.15"